refactor(936): C1-7 checkpoint bounded producer composition (WIP)
Inject the shared process registry through Head, Worker, Lucene, inference,
telemetry, launcher, HTTP and UI producers. Separate urgency pools, bound instance
replacement, preserve running executors in accounting and close owned generations.
Include constructor/test migrations and owned shutdown corrections together.

This is the accumulated producer-wiring item, not a completion claim. Lucene
KnowledgeServer composition and remaining direct test builders are incomplete;
OCR/per-source/startup-reaper census and ScanProgressRegistry retained buffers
remain. Agent-history overflow retry was being implemented at the checkpoint.
Recent inference regression additions and shutdown tests are uncompiled/unrun.
See checkpoints.md and batch-4.md for scoped passing and retained failing proof.
Full stress-enabled and final installed live admission/pacing remain required.

User-authorized item WIP checkpoint; push immediately and continue the lane.