@@ -1,105 +1,120 @@
 /* SPDX-License-Identifier: Apache-2.0 */
 package io.justsearch.app.services.encryption;
 
+import io.justsearch.core.execution.EngineExecutorRegistry;
+import io.justsearch.core.execution.EngineExecutorSpec;
 import java.time.Duration;
 import java.util.Objects;
 import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
-import java.util.concurrent.RejectedExecutionException;
 import java.util.concurrent.TimeUnit;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 /**
- * Tempdoc 834 §5.2 — runs a store scan when the data key unlocks, OFF the key monitor.
- *
- * <p>Two constraints from {@link DataKeyManager}, both load-bearing and both easy to violate with a
- * one-line lambda:
- *
- * <ul>
- *   <li>{@code fire(before, state())} runs inside the {@code synchronized unlock()} (and
- *       {@code setup} / {@code recover}), so listeners execute UNDER the key monitor. A directory
- *       scan there blocks the whole key lifecycle for its duration.
- *   <li>{@code fire} SWALLOWS listener throws, so a fault on this path is not loud — it is gone.
- * </ul>
- *
- * <p>So the listener does exactly one thing: hand the scan to a single daemon thread and return.
- * The scan itself must be idempotent, because boot, unlock and a later re-unlock all trigger it.
- *
- * <p>This exists as a named class rather than an inline lambda because those two properties are
- * testable only if there is something to hold — {@code UnlockDeferredScanTest} asserts that
- * {@code unlock()} returns while the scan is still running, and that a throwing scan neither breaks
- * unlock nor kills subsequent scans.
+ * Runs idempotent store reconciliation off DataKeyManager's synchronized unlock listener.
+ * One registered worker coalesces unlock notifications into a pending scan. No queue of scans
+ * or resubmission window is needed: a notification during a scan requests one subsequent pass.
  */
 public final class UnlockDeferredScan implements AutoCloseable {
-
   private static final Logger LOG = LoggerFactory.getLogger(UnlockDeferredScan.class);
-
   private final Runnable scan;
   private final ExecutorService executor;
+  private final EngineExecutorRegistry.Registration executorOwner;
+  private final Object monitor = new Object();
+  private boolean pending;
+  private boolean running;
+  private boolean closed;
+  private volatile Thread worker;
 
-  public UnlockDeferredScan(String threadName, Runnable scan) {
+  public UnlockDeferredScan(EngineExecutorRegistry executors, String threadName, Runnable scan) {
     this.scan = Objects.requireNonNull(scan, "scan");
-    this.executor =
-        Executors.newSingleThreadExecutor(
-            r -> {
-              Thread t = new Thread(r, threadName);
-              t.setDaemon(true);
-              return t;
-            });
+    var limits = executors.limits(EngineExecutorSpec.Kind.BACKGROUND);
+    executorOwner = executors.register(new EngineExecutorSpec("head." + threadName,
+        EngineExecutorSpec.Kind.BACKGROUND, EngineExecutorSpec.Mode.PLATFORM,
+        1, limits.maxQueue(), 1));
+    try {
+      executor = executorOwner.open(Thread.ofPlatform().daemon().name(threadName).factory());
+      executor.execute(this::drain);
+    } catch (RuntimeException | Error failure) {
+      try { executorOwner.close(); }
+      catch (RuntimeException | Error cleanup) { failure.addSuppressed(cleanup); }
+      throw failure;
+    }
   }
 
-  /** Subscribe to {@code keys}; every transition INTO {@code UNLOCKED} schedules one scan. */
+  /** Subscribe to transitions into UNLOCKED; listener work never scans under the key monitor. */
   public UnlockDeferredScan attachTo(DataKeyManager keys) {
-    Objects.requireNonNull(keys, "keys").addListener(
-        (from, to) -> {
-          if (to == DataKeyManager.State.UNLOCKED) {
-            schedule();
-          }
-        });
+    Objects.requireNonNull(keys, "keys").addListener((from, to) -> {
+      if (to == DataKeyManager.State.UNLOCKED) schedule();
+    });
     return this;
   }
 
-  /** Hand one scan to the worker thread. Never throws — see the class javadoc's second constraint. */
+  /** Request a scan, coalescing repeated notifications while one is pending or running. */
   public void schedule() {
-    try {
-      executor.execute(this::runGuarded);
-    } catch (RejectedExecutionException shuttingDown) {
-      LOG.warn("Deferred unlock scan not scheduled (executor is shutting down)", shuttingDown);
+    synchronized (monitor) {
+      if (closed) return;
+      pending = true;
+      monitor.notifyAll();
     }
   }
 
-  private void runGuarded() {
+  private void drain() {
+    worker = Thread.currentThread();
     try {
-      scan.run();
-    } catch (RuntimeException | Error e) {
-      // The scan runs detached, so nothing else can observe its failure. Log it here or lose it.
-      LOG.warn("Deferred unlock scan failed", e);
-    }
-  }
-
-  /**
-   * Block until every scheduled scan has finished, or {@code timeout} elapses. The queue is FIFO on
-   * a single thread, so a no-op task completing means every scan queued before it has run.
-   *
-   * <p>Used by {@link #close} to drain, and by the tests — a detached scan is otherwise
-   * unobservable, which is exactly how the encrypted-install bug this class prevents would hide.
-   */
-  boolean awaitQuiescence(Duration timeout) {
-    try {
-      return executor.submit(() -> null).get(timeout.toMillis(), TimeUnit.MILLISECONDS) == null;
-    } catch (InterruptedException e) {
+      for (;;) {
+        synchronized (monitor) {
+          while (!pending && !closed) monitor.wait();
+          if (!pending) return;
+          pending = false;
+          running = true;
+        }
+        try { scan.run(); }
+        catch (RuntimeException | Error failure) { LOG.warn("Deferred unlock scan failed", failure); }
+        finally {
+          synchronized (monitor) {
+            running = false;
+            monitor.notifyAll();
+          }
+        }
+      }
+    } catch (InterruptedException interrupted) {
       Thread.currentThread().interrupt();
-      return false;
-    } catch (Exception e) {
-      return false;
+    } finally {
+      synchronized (monitor) {
+        closed = true;
+        running = false;
+        monitor.notifyAll();
+      }
     }
   }
 
-  /** Drain briefly, then stop. A scan already writing gets to finish rather than being interrupted. */
+  /** Waits on actual scan state, including a notification received during the previous pass. */
+  boolean awaitQuiescence(Duration timeout) {
+    long deadline = System.nanoTime() + timeout.toNanos();
+    synchronized (monitor) {
+      while (pending || running) {
+        long remaining = deadline - System.nanoTime();
+        if (remaining <= 0) return false;
+        try { TimeUnit.NANOSECONDS.timedWait(monitor, remaining); }
+        catch (InterruptedException interrupted) {
+          Thread.currentThread().interrupt();
+          return false;
+        }
+      }
+      return true;
+    }
+  }
+
+  /** Stop accepting notifications, drain accepted scans briefly, then retire the owned worker. */
   @Override
   public void close() {
-    awaitQuiescence(Duration.ofSeconds(5));
-    executor.shutdownNow();
+    synchronized (monitor) {
+      closed = true;
+      monitor.notifyAll();
+    }
+    executor.shutdown();
+    if (Thread.currentThread() != worker) awaitQuiescence(Duration.ofSeconds(5));
+    executorOwner.close();
   }
 }
